<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >
    <string name="file_provider" translatable="false">com.audeon.browser.fileprovider.standard</string>
    <string name="file_provider_directory" translatable="false">file_provider</string>
    <string name="audeon_browser">Audeon Browser</string>
    <string name="short_name">Audeon</string>
    <string name="android_asset_path">en</string>
    <string name="privacy_mode">Privacy Mode</string>
    <string name="javascript_enabled">JavaScript enabled</string>
    <string name="javascript_disabled">JavaScript disabled</string>
    <string name="cookies_enabled">Cookies enabled</string>
    <string name="cookies_disabled">Cookies disabled</string>
    <string name="dom_storage_enabled">DOM Storage enabled</string>
    <string name="dom_storage_disabled">DOM Storage disabled</string>
    <string name="cookies_deleted">Cookies deleted</string>
    <string name="dom_storage_deleted">DOM Storage deleted</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>
    <string name="pin_drawer">Pin drawer</string>
    <string name="unrecognized_url">Unrecognized URL:\u0020 %1$s</string>
    <string name="add_tab">Add tab</string>
    <string name="close_tab">Close tab</string>
    <string name="new_tab">New tab</string>
    <string name="loading">Loading…</string>
    <string name="error">Error:\u0020 %1$s</string>
    <string name="apply">Apply</string>
    <string name="loading_easylist">Loading EasyList</string>
    <string name="loading_easyprivacy">Loading EasyPrivacy</string>
    <string name="loading_fanboys_annoyance_list">Loading Fanboy’s Annoyance List</string>
    <string name="loading_fanboys_social_blocking_list">Loading Fanboy’s Social Blocking List</string>
    <string name="loading_ultralist">Loading UltraList</string>
    <string name="loading_ultraprivacy">Loading UltraPrivacy</string>
    <string name="favorite_icon">Favorite Icon</string>
    <string name="url_or_search_terms">URL or Search Terms</string>
    <string name="view_ssl_certificate">View SSL Certificate</string>
    <string name="unencrypted_website">Unencrypted Website</string>
    <string name="no_ssl_certificate">Communication with this website is not encrypted. This allows third parties to intercept information, track your browsing, and inject malicious content.</string>
    <string name="content_url">Content URL</string>
    <string name="content_url_message">Content URLs are data loaded from other apps on your device.</string>
    <string name="ssl_certificate">SSL Certificate</string>
    <string name="close">Close</string>
    <string name="domain">Domain</string>
    <string name="domain_label">Domain: \u0020</string>
    <string name="ip_addresses">IP Addresses: \u0020</string>
    <string name="issued_to">Issued To</string>
    <string name="issued_by">Issued By</string>
    <string name="common_name">Common Name (CN): \u0020</string>
    <string name="organization">Organization (O): \u0020</string>
    <string name="organizational_unit">Organizational Unit (OU): \u0020</string>
    <string name="valid_dates">Valid Dates</string>
    <string name="start_date">Start Date: \u0020</string>
    <string name="end_date">End Date: \u0020</string>
    <string name="ssl_certificate_error">SSL Certificate Error</string>
    <string name="proceed">Proceed</string>
    <string name="future_certificate">The certificate start date is in the future</string>
    <string name="expired_certificate">The certificate is expired</string>
    <string name="cn_mismatch">The Common Name does not match the hostname</string>
    <string name="untrusted">The certificate authority is not trusted</string>
    <string name="invalid_date">The date on the certificate is invalid</string>
    <string name="invalid_certificate">The certificate is invalid</string>
    <string name="url">URL</string>
    <string name="url_label">URL: \u0020</string>
    <string name="pinned_mismatch">Pinned Mismatch</string>
    <string name="update">Update</string>
    <string name="current">Current</string>
    <string name="pinned">Pinned</string>
    <string name="http_authentication">HTTP Authentication</string>
    <string name="host">Host: \u0020</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="clear_and_exit">Clear and Exit</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="scroll_to_bottom">Scroll to Bottom</string>
        <string name="scroll_to_top">Scroll to Top</string>
    <string name="history">History</string>
        <string name="clear_history">Clear History</string>
    <string name="open">Open</string>
    <string name="downloads">Downloads</string>
        <string name="no_file_manager_detected">The system cannot detect a compatible file manager.</string>
    <string name="settings">Settings</string>
    <string name="import_export">Import/Export</string>
    <string name="logcat">Logcat</string>
    <string name="webview_devtools">WebView DevTools</string>
    <string name="about">About</string>
    <string name="javascript">JavaScript</string>
    <string name="refresh">Refresh</string>
    <string name="stop">Stop</string>
    <string name="cookies">Cookies</string>
    <string name="dom_storage">DOM Storage</string>
    <string name="clear_data">Clear Data</string>
        <string name="clear_cookies">Clear Cookies</string>
        <string name="clear_dom_storage">Clear DOM Storage</string>
        <string name="options_fanboys_annoyance_list">Fanboy’s Annoyance List</string>
        <string name="options_fanboys_social_blocking_list">Fanboy’s Social Blocking List</string>
        <string name="options_block_all_third_party_requests">Block All Third-Party Requests</string>
    <string name="page">Page</string>
        <string name="options_user_agent">User Agent</string>
            <string name="user_agent_audeon_browser">audeon browser</string>
            <string name="user_agent_webview_default">WebView Default</string>
            <string name="user_agent_firefox_on_android">Firefox on Android</string>
            <string name="user_agent_chrome_on_android">Chrome on Android</string>
            <string name="user_agent_safari_on_ios">Safari on iOS</string>
            <string name="user_agent_firefox_on_linux">Firefox on Linux</string>
            <string name="user_agent_chromium_on_linux">Chromium on Linux</string>
            <string name="user_agent_firefox_on_windows">Firefox on Windows</string>
            <string name="user_agent_chrome_on_windows">Chrome on Windows</string>
            <string name="user_agent_edge_on_windows">Edge on Windows</string>
            <string name="user_agent_safari_on_macos">Safari on macOS</string>
            <string name="user_agent_custom">Custom</string>
        <string name="swipe_to_refresh_options_menu">Swipe to Refresh</string>
        <string name="wide_viewport">Wide Viewport</string>
        <string name="display_images">Display Images</string>
        <string name="dark_webview">Dark WebView</string>
        <string name="font_size">Font Size</string>
        <string name="find_on_page">Find on Page</string>
        <string name="print">Print</string>
            <string name="audeon_browser_webpage">audeon browser Webpage</string>
        <string name="save">Save</string>
        <string name="add_to_home_screen">Add to Home Screen</string>
        <string name="view_source">View Source</string>
        <string name="view_rendered_website">View Rendered Website</string>
        <string name="view_headers">View Headers</string>
    <string name="share">Share</string>
        <string name="share_message">Share Message</string>
        <string name="share_url">Share URL</string>
        <string name="open_with_app">Open with App</string>
        <string name="open_with_browser">Open with Browser</string>
    <string name="add_domain_settings">Add Domain Settings</string>
    <string name="edit_domain_settings">Edit Domain Settings</string>
    <string name="open_in_new_tab">Open in New Tab</string>
    <string name="open_in_background">Open in Background</string>
    <string name="open_image_in_new_tab">Open Image in New Tab</string>
    <string name="share_image">Share Image</string>
    <string name="copy_url">Copy URL</string>
    <string name="copy_text">Copy Text</string>
    <string name="email_address">Email Address</string>
    <string name="copy_email_address">Copy Email Address</string>
    <string name="write_email">Write Email</string>
    <string name="view_image">View Image</string>
    <string name="zero_of_zero" translatable="false">0/0</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="file_is_mht">The file is an MHT web archive.</string>
    <string name="mht_checkbox_explanation">Sometimes MIME Encapsulated HTML (MHT) web archives need to be manually specified to be opened correctly.</string>
    <string name="save_dialog" translatable="false">Save Dialog</string>
    <string name="save_url">Save URL</string>
    <string name="save_archive">Save Archive</string>
    <string name="save_text">Save Text</string>
    <string name="save_image">Save Image</string>
    <string name="file_name">File name</string>
    <string name="file">File</string>
    <string name="bytes">bytes</string>
    <string name="unknown_size">unknown size</string>
    <string name="invalid_url">invalid URL</string>
    <string name="blob_url_warning">audeon browser cannot currently download blob URLs.</string>
    <string name="data_url_warning">Android’s download manager cannot handle data URLs.</string>
    <string name="download_directory">Download directory</string>
    <string name="documents">Documents</string>
    <string name="pictures">Pictures</string>
    <string name="music">Music</string>
    <string name="saving_file">Saving file:\u0020 %1$d%% - %2$s</string>
    <string name="saving_file_progress">Saving file:\u0020 %1$s bytes - %2$s</string>
    <string name="saving_file_percentage_progress">Saving file:\u0020 %1$d%% - %2$s bytes / %3$s bytes - %4$s</string>
    <string name="saved">%1$s saved.</string>
    <string name="download_cancelled">Download cancelled.</string>
    <string name="processing_image">Processing image:\u0020 %1$s</string>
    <string name="error_saving_file">Error saving %1$s:\u0020 %2$s</string>
    <string name="unknown_error">Unknown error</string>
    <string name="colon">: \u0020</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="move_to_folder">Move to Folder</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="move_to_top">Move to Top</string>
    <string name="move_to_bottom">Move to Bottom</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select All</string>
    <string name="requests">Requests</string>
    <string name="domains">Domains</string>
    <string name="copy_string">Copy</string>
    <string name="filterlists">Filter Lists</string>
        <string name="easylist">EasyList</string>
        <string name="easyprivacy">EasyPrivacy</string>
        <string name="ultralist">UltraList</string>
        <string name="ultraprivacy">UltraPrivacy</string>
    <string name="proxy">Proxy</string>
        <string name="proxy_none">None</string>
        <string name="proxy_tor">Tor</string>
        <string name="proxy_i2p">I2P</string>
        <string name="proxy_custom">Custom</string>
    <string name="menu_profiles">Profile Settings</string>
</resources>