<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright 2018, 2022-2024 Soren Stoutner <soren@stoutner.com>.

  This file is part of Privacy Browser Android <https://www.stoutner.com/privacy-browser-android>.

  Privacy Browser Android is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  Privacy Browser Android is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with Privacy Browser Android.  If not, see <http://www.gnu.org/licenses/>. -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/copy_headers"
        android:title="@string/copy_string"
        android:orderInCategory="10"
        app:showAsAction="never" />

    <item
        android:id="@+id/share_headers"
        android:title="@string/share"
        android:orderInCategory="20"
        app:showAsAction="never" />

    <item
        android:id="@+id/save_headers"
        android:title="@string/save"
        android:orderInCategory="30"
        app:showAsAction="never" />

    <item
        android:id="@+id/about_view_headers"
        android:title="@string/about"
        android:orderInCategory="40"
        app:showAsAction="never" />
</menu>
